Got FEC compiling
Total hack on the fecpp shared object file.. put it in the same
directory as the jrtplib, and called it libfecpp (so -lfecpp then finds
it)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ if (JTHREAD_ENABLED)
 	if (JTHREAD_FOUND)
 		save_paths(JRTPLIB_EXTERNAL_INCLUDES "${JTHREAD_INCLUDE_DIRS}")
 		save_paths(JRTPLIB_LINK_LIBS "${JTHREAD_LIBRARIES}")
+		save_paths(JRTPLIB_LINK_LIBS "-lfecpp")
 	endif(JTHREAD_FOUND)
 else (JTHREAD_ENABLED)
 	set (RTP_SUPPORT_THREAD "// No support for JThread was enabled")
