Jitter buffer partly compiles, C++11

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -102,6 +102,7 @@ set(SOURCES
 	rtpabortdescriptors.cpp
 	rtptcpaddress.cpp
 	rtptcptransmitter.cpp
+	jitterbuffer.cpp
 	)
 
 if (NOT JRTPLIB_WINSOCK)
