--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set(VERSION_MINOR 11)
 set(VERSION_DEBUG 1)
 set(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_DEBUG}")
 
+set (CMAKE_CXX_STANDARD 11)
+
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 if (CMAKE_INSTALL_PREFIX AND NOT CMAKE_PREFIX_PATH)
     #message("Setting CMAKE_PREFIX_PATH to ${CMAKE_INSTALL_PREFIX}")
