--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(VERSION_DEBUG 1)
 set(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_DEBUG}")
 
 set (CMAKE_CXX_STANDARD 11)
+#set(CMAKE_BUILD_TYPE Debug) # For gdb.. maybe works
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 if (CMAKE_INSTALL_PREFIX AND NOT CMAKE_PREFIX_PATH)
