--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -103,6 +103,7 @@ set(SOURCES
 	rtpabortdescriptors.cpp
 	rtptcpaddress.cpp
 	rtptcptransmitter.cpp
+	jitterbuffer.cpp
 	)
 
 if (NOT JRTPLIB_WINSOCK)
